MTUCI project upgrade

--- a/new_dorty_web/index.html
+++ b/new_dorty_web/index.html
@@ -137,7 +137,7 @@
 			  </a>
 			  <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
 				<li><a class="dropdown-item" href="https://codeforces.com/contestInvitation/709dc3e3f466e68e1f8e50c71d59427062932a3d">CF Contest Invitation</a></li>
-				
+				<li><a class="dropdown-item" href="/show">FrontEnd 2023 MTUCI Project</a></li>
 				
 			  </ul>
 			</li>
