--- a/show/index.html
+++ b/show/index.html
@@ -104,8 +104,9 @@
     <footer>
         <h3>KURS</h3>
         <div class="pages">
-            <a href="page2.html">ПОРТФОЛИО</a>
-            <a href="page3.html" class="margin">ПРЕИМУЩЕСТВА</a>
+            <a href="portfolio.html">ПОРТФОЛИО</a>
+            <a href="contacts.html" class="margin">КОНТАКТЫ</a>
+			<a href="page3.html" class="margin">ПРЕИМУЩЕСТВА</a>
             <a href="page4.html" class="margin">О САЙТЕ</a>
         </div>
         <div class="contacts">
