--- a/show/portfolio.html
+++ b/show/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style2.css">
-    <title>Document</title>
+    <title>KURS - Портфолио</title>
 </head>
 <body>
     <header>
