--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 				<li><a class="dropdown-item" href="http://rocket.gosunov.ru/">Rocket Landing</a></li>
 				<li><a class="dropdown-item" href="http://memes.gosunov.ru/">Memes</a></li>
 				<li><a class="dropdown-item" href="http://cpp.gosunov.ru/">Cpp Parser</a></li>
+				<li><a class="dropdown-item" href="https://zmeika.gosunov.ru/">Zmeika</a></li>
+				<li><a class="dropdown-item" href="https://w23fqr7p.gosunov.ru">Secret</a></li>
+				
 				
 				<li><a class="dropdown-item" href="http://phs.gosunov.ru/">phs</a></li>
 				<li><a class="dropdown-item" href="http://chess.gosunov.ru/">chess</a></li>
