--- a/show/index.html
+++ b/show/index.html
@@ -85,7 +85,7 @@
             доверить задачи любого уровня сложности – от оформления частных квартир до проектирования международных аэропортов.
             Архитектурное бюро KURS реализавало отдельные этапы работ и предлагает комплексное обслуживание. 
         </p>
-       <a href="page2.html">Подробнее...</a>
+       <a href="portfolio.html">Подробнее...</a>
     </div>
     <div class="Price">
         <h2>Почему Мы?</h2>
@@ -99,15 +99,15 @@
             Приняв решение заказать дизайн интерьера у нас, вы получите необходимую документацию для ремонта. Делаем
             перепланировку с согласовыванием.
         </p>
-       <a href="page3.html">Подробнее...</a>
+       <a href="price.html">Подробнее...</a>
     </div>
     <footer>
         <h3>KURS</h3>
         <div class="pages">
             <a href="portfolio.html">ПОРТФОЛИО</a>
             <a href="contacts.html" class="margin">КОНТАКТЫ</a>
-			<a href="page3.html" class="margin">ПРЕИМУЩЕСТВА</a>
-            <a href="page4.html" class="margin">О САЙТЕ</a>
+			<a href="about.html" class="margin">О КОМПАНИИ</a>
+            <a href="price.html" class="margin">ЦЕНЫ</a>
         </div>
         <div class="contacts">
             <a title='Написать нам на почту' href="mailto:saha262004@gmail.com"><img alt='Изображение электронной почты' src="social/letter.svg" width="50" class="zoomable"></a>
