--- a/show/portfolio.html
+++ b/show/portfolio.html
@@ -8,9 +8,11 @@
 <body>
     <header>
         <h1 class='pages'>Портфолио
+			<a href="index.html">НА ГЛАВНУЮ</a>
             <a href="portfolio.html">ПОРТФОЛИО</a>
-            <a href="page3.html" class="margin">ПРЕИМУЩЕСТВА</a>
-            <a href="page4.html" class="margin">О САЙТЕ</a>
+			<a href="contacts.html">КОНТАКТЫ</a>
+            <a href="about.html" class="margin">О КОМПАНИИ</a>
+            <a href="price.html" class="margin">ЦЕНОВАЯ ПОЛИТИКА</a>
           </h1>
 
 
