цены .js + таблица

--- a/show/contacts.html
+++ b/show/contacts.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <header>
-        <h1>Контакты</h1>
+        <h1 class='pages'>Контакты
+            <a href="index.html">НА ГЛАВНУЮ</a>
+            <a href="portfolio.html">ПОРТФОЛИО</a>
+			<a href="contacts.html">КОНТАКТЫ</a>
+            <a href="about.html" class="margin">О КОМПАНИИ</a>
+            <a href="price.html" class="margin">ЦЕНОВАЯ ПОЛИТИКА</a>
+        </h1>
         <hr>
     </header>
     <div class="content">
