--- a/show/price.html
+++ b/show/price.html
@@ -133,20 +133,20 @@
         </table>
 
         <h2>Калькулятор цены</h2>
-        <div> Вы можете выбрать лишь некоторые услуги, тем самым подстроив план под себя. Стоимость плана будет удтверждаться в дальнейшем, но Вы сможете узнать приблизительную стоимость проекта </div>
+        <div class='cooltext'> Вы можете выбрать лишь некоторые услуги, тем самым подстроив план под себя. Стоимость плана будет удтверждаться в дальнейшем, но Вы сможете узнать приблизительную стоимость проекта </div>
 
         <form action="/action_page.php">
-            <input type="checkbox" id="option1" name="vehicle1" value="Bike">
+            <input class="custom-checkbox" type="checkbox" id="option1" name="option1" value="Bike">
             <label for="option1"> Спецификация заполнения дверных и оконных проемов</label><br>
-            <input type="checkbox" id="option2" name="vehicle2" value="Car">
+            <input class="custom-checkbox" type="checkbox" id="option2" name="option2" value="Car">
             <label for="option2"> Ведомость отделки фасадов</label><br>
-            <input type="checkbox" id="option3" name="vehicle2" value="Car">
+            <input class="custom-checkbox" type="checkbox" id="option3" name="option3" value="Car">
             <label for="option3"> 3Д-визуализация (изображение нескольких ракурсов)</label><br>
-            <input type="checkbox" id="option4" name="vehicle3" value="Boat">
+            <input class="custom-checkbox" type="checkbox" id="option4" name="option4" value="Boat">
             <label for="option4"> Функциональная планировка участка</label><br>
-            <label> Площадь: </label> <input type="number" id='surface' min='5' value="" placeholder="Площадь в кв. м"><br>
-            <label> ИТОГОВАЯ СТОИМОСТЬ </label>
-            <label> От </label> <input type="text" value="" id="start" placeholder="0 p." disabled> <label> До </label> <input type="text" value="" id='end' placeholder="0 p." disabled>
+             <div class='cooltext'> Площадь: <input class='cooltextbox' type="number" id='surface' min='5' value="" placeholder="Площадь в кв. м"></div>
+            <div class='cooltext'> ИТОГОВАЯ СТОИМОСТЬ
+            От <input class='cooltextbox' type="text" value="" id="start" placeholder="0 p." disabled> </input> До <input class='cooltextbox' type="text" value="" id='end' placeholder="0 p." disabled> </input> </div>
 
         </form>
 
