--- a/NumBases/index.html
+++ b/NumBases/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-<a>NUM=  </a> <input id="In1" style="width:228px"> </p>
-<a>FROM=  </a> <input id="In2" style="width:228px"> </p> 
-<a>TO=  </a> <input id="In3" style="width:228px">  </p>
-<a>RESULT=  </a> <input id="In4" style="width:228px"> </p>
+<a>NUM=  </a> <input id="num" style="width:228px"> </p>
+<a>FROM=  </a> <input id="from_base" style="width:228px"> </p>
+<a>TO=  </a> <input id="to_base" style="width:228px">  </p>
+<a>RESULT=  </a> <input id="res" style="width:228px" disabled> </p>
 <script src="script.js"> </script>
 
 
