--- a/show/about.html
+++ b/show/about.html
@@ -2,15 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style3.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style2.css">
+    <title>KURS - О Компании</title>
 </head>
 <body>
     <header>
-        <h1>Наши Преимущества</h1>
+        <h1 class='pages'>О Компании
+            <a href="index.html">НА ГЛАВНУЮ</a>
+            <a href="portfolio.html">ПОРТФОЛИО</a>
+			<a href="contacts.html">КОНТАКТЫ</a>
+            <a href="about.html" class="margin">О КОМПАНИИ</a>
+            <a href="price.html" class="margin">ЦЕНОВАЯ ПОЛИТИКА</a>
+        </h1>
         <hr>
     </header>
     <div class="content">
+
+        <div class='cooltext'>Являясь одновременно и ремеслом, и искусством, архитектура требует применения как технических навыков, так и
+            творческого потенциала. Архитектурное бюро «KURS» объединяет специалистов, готовых предложить грамотные
+            функционально-технические решения, облаченные в творчество. Сотрудники бюро имеют все качества, которые необходимы
+            для разработки уникального проекта любой сложности. Коллектив архитектурного бюро KURS, под управлением Ивана
+            Бакушина и Марии Воропаевой, выполнил более 100 проектов разного масштаба: комплексное архитектурное проектирование,
+            реконструкция, дизайн интерьеров.</div>
+        <br>
+        <div class='cooltext'>Для создания проекта требуется командная работа всего коллектива. Командный дух, четкая и оперативная реализация поставленных задач – сегодня это безусловная норма. В архитектурном бюро сотрудничают высококвалифицированные дизайнеры и архитекторы, инженеры и конструкторы, каждый из которых любит свою работу, а потому прилагает к ней не только свои знания, но и талант. Специалисты компании усердно заботятся об общем деле и работают на результат – это во многом обеспечивается дружеской и творческой атмосферой.</div>
+
+        <br>
+        <div class='cooltext'>Мы с каждым днём улучшаем наши стандарты качества, чтобы заказчику было удобно работать с компанией. Правило, которого мы придерживаемся - "Клиент не должен думать удобно ли "это", нам, мы должны быть всегда готовы помочь клиенту разрешить любые вопросы". Мы доступны 24\7 по телефону на горячей линии. Ответ на письма в электронной почте происходит в автоматическом и полуавтоматическом форматах. </div>
+
+        <br>
+        <div class='cooltext'>Наша компания была основана в 2009 году. Мы до сих пор придерживаемся новым стандартам и стараемся следить за трендами, модой и стилем. Поэтому, Вы можете найти нас на просторах интернета, мы есть в большом количестве социальных сетей.</div>
+
+
+
 
     </div>
 </body>
