--- a/show/contacts.html
+++ b/show/contacts.html
@@ -18,8 +18,9 @@
     <div class="content">
 
         <div class='contact'>email: <a title='Написать нам на почту' href="mailto:example@gmail.com">example@gmail.com </a> </div>
-        <div class='contact'>Кон­так­тный те­лефон: +7 (123) 456-78-90 </div>
-        <div class='contact'>Ад­рес:  123456, Мос­ква, Ле­нин­градский пр-т, 789А, с.1, БЦ «Мо­нАрх» </div>
+		<div class='contact'>telegram: <a title='Мы в Telegram' href="http://t.me/Oleg9Let">@example </a> </div>
+        <div class='contact'>Контактный телефон: +7 (123) 456-78-90 </div>
+        <div class='contact'>Адрес:  123456, Мос­ква, Ле­нин­градский пр-т, 789А, с.1, БЦ «Мо­нАрх» </div>
 
 
 
