--- a/show/index.html
+++ b/show/index.html
@@ -112,6 +112,7 @@
         <div class="contacts">
             <a title='Написать нам на почту' href="mailto:saha262004@gmail.com"><img alt='Изображение электронной почты' src="social/letter.svg" width="50" class="zoomable"></a>
             <a title='Мы в Телеграм' href="http://t.me/Oleg9Let" class="margin"><img alt='Изображение социальной сети Telegram' src="social/telegram-logo.svg" width="50" class="zoomable"></a>
+			<a title='Карта Сайта' href="map.html" class="margin"><img alt='Переход на карту сайта' src="social/map_black.png" width="50" class="zoomable"></a>
         </div>
 
     </footer>
