--- a/show/about.html
+++ b/show/about.html
@@ -17,7 +17,7 @@
         <hr>
     </header>
     <div class="content">
-
+		
         <div class='cooltext'>Являясь одновременно и ремеслом, и искусством, архитектура требует применения как технических навыков, так и
             творческого потенциала. Архитектурное бюро «KURS» объединяет специалистов, готовых предложить грамотные
             функционально-технические решения, облаченные в творчество. Сотрудники бюро имеют все качества, которые необходимы
@@ -32,8 +32,19 @@
 
         <br>
         <div class='cooltext'>Наша компания была основана в 2009 году. Мы до сих пор придерживаемся новым стандартам и стараемся следить за трендами, модой и стилем. Поэтому, Вы можете найти нас на просторах интернета, мы есть в большом количестве социальных сетей.</div>
+		
+		<h2><a class="nav_p_link" href="https://imuntouchable.github.io/#">Кафе "Гараж" </a></h2>
+		
 
-
+		<div class="row">
+			
+			
+			<div class='cooltext'>Если вы привыкли двигаться в ускоренном темпе, то сама идея быстрой еды для вас не будет в новинку. Для тех, кто желает скорее перекусить в перерыве между делами, кафе быстрого питания Гараж предлагает ряд простых, но питательных блюд по умеренным ценам. Еда готовится таким образом, чтобы ее можно было взять с собой. Всех гостей ждут по адресу: Республика Северная Осетия — Алания, улица Морских Пехотинцев, 8. Для гостей заведение работает Пн-вс: 10:00 - 23:00.</div>
+			<div class="img"><img src="images/garage.jpg"></div>
+		</div>
+			
+			
+        
 
 
     </div>
